## Process this file with automake to produce Makefile.in

uidatadir = $(prefix)/dx/ui

DATA1 = \
	icon50.dat icon50.xpm logo.dat logo.xpm ui.mdf Basic2D.cfg Basic2D.net \
	Basic3D.cfg Basic3D.net FacesLoopsEdges.cfg FacesLoopsEdges.net \
	GARMWName Gridded_2D_1var_notseries.cfg Gridded_2D_1var_notseries.net \
	Gridded_2D_2ormorevar_notseries.cfg Gridded_2D_2ormorevar_notseries.net \
	Gridded_3D_1var_notseries.cfg Gridded_3D_1var_notseries.net \
	Gridded_3D_2ormorevar_notseries.cfg Gridded_3D_2ormorevar_notseries.net \
	ImportSpreadsheetMatrix.cfg ImportSpreadsheetMatrix.net \
	ImportSpreadsheetTable.cfg
DATA2 = \
	ImportSpreadsheetTable.net ReadImage.cfg ReadImage.net \
	UnGridded_2D_1var_notseries.cfg UnGridded_2D_1var_notseries.net \
	UnGridded_2D_2ormorevar_notseries.cfg UnGridded_2D_2ormorevar_notseries.net \
	UnGridded_3D_1var_notseries.cfg UnGridded_3D_1var_notseries.net \
	UnGridded_3D_2ormorevar_notseries.cfg UnGridded_3D_2ormorevar_notseries.net \
	date.fmt decision.cfg decision.net editorWindow help.txt \
	imageWindow support.txt syntax.txt testimp.net testssheet.net viewer.net 

uidata_DATA = $(DATA1) $(DATA2)

EXTRA_DIST = $(uidata_DATA)
