## Process this file with automake to produce Makefile.in

INCLUDES = -I${top_srcdir}/include -I${srcdir}/../widgets -D@ARCH@

noinst_LIBRARIES = libWIDGETS.a

noinst_HEADERS = \
	Color.h \
	ColorMapEditor.h \
	ColorMapEditorP.h \
	ControlField.h \
	Dial.h \
	DialP.h \
	FFloat.h \
	FieldCursor.h \
	FrameControl.h \
	FrameControlP.h \
	Grid.h \
	Image.h \
	ImageP.h \
	MultiText.h \
	MultiTextP.h \
	Number.h \
	NumberInput.h \
	NumberP.h \
	NumericList.h \
	NumericListP.h \
	Picture.h \
	PictureP.h \
	SlideBar.h \
	SlideBarP.h \
	Slider.h \
	SliderP.h \
	Stepper.h \
	StepperP.h \
	VCRControl.h \
	VCRControlP.h \
	WorkspaceCallback.h \
	WorkspaceP.h \
	WorkspaceW.h \
	XmDX.h \
	clipnotify.h \
	findcolor.h \
	gamma.h 

libWIDGETS_a_SOURCES =  		\
	ColorBar.c			\
	ColorRGB.c			\
	ColorMapEditor.c		\
	ControlColor.c			\
	ControlField.c			\
	ControlLine.c			\
	ControlPoint.c			\
	ControlValue.c			\
	Dial.c				\
        Dither.c                        \
        Grid.c                          \
	FFloat.c			\
	FrameControl.c			\
	Image.c				\
	Number.c			\
	NumberOutput.c			\
        NumericList.c			\
	MultiText.c			\
	Picture.c			\
	Slider.c			\
	SlideBar.c			\
	Stepper.c			\
	findcolor.c			\
	gamma.c				\
	VCRControl.c			\
	WorkspaceW.c			\
	WorkspaceCallback.c		\
	Findroute.c			

EXTRA_DIST =				\
	backward.bm			\
	forward.bm			\
	frame.bm			\
	loop.bm				\
	palim.bm			\
	pause.bm			\
	step.bm				\
	stepb.bm			\
	stepf.bm			\
	stop.bm
